create dir if not exists

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,3 +1,4 @@
 dr_name: static-service
 dr_dir: '/srv/{{dr_name}}'
-dr_repo: https://github.com/madiedinro/fuck_lake
+dr_repo: https://github.com/madiedinro/fuck_flake
+dr_dir_mode: 0755
